<resources>
    <string name="app_name">EldarWallet</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="balance">Saldo</string>
    <string name="associated_cards">Tarjetas asociadas</string>
    <string name="expires">Vence</string>
    <string name="add_card">Agregar tarjeta</string>
    <string name="generate_qr">Generar QR</string>
    <string name="pay_with_qr">Pagar con QR</string>
    <string name="destiny">Destino:</string>
    <string name="total_to_pay">Total a pagar:</string>
    <string name="pay">Pagar</string>
    <string name="continue_">Continuar</string>
    <string name="pay_with_card">Pagar con tarjeta</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="show_qr">Mostrá tu QR</string>
    <string name="nfc_instruction">Acerque su tarjeta para realizar el pago a través de NFC</string>
    <string name="select_card">Seleccionar tarjeta</string>
    <string name="cbu">CBU/ALIAS:</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="card_name">Nombre del titular de la tarjeta</string>
    <string name="expiration_date">Vencimiento</string>
    <string name="expiration_date_format">MM/AA</string>
    <string name="security_code">Código de seguridad</string>
    <string name="card_document">Documento del titular</string>
    <string name="complete">Completar</string>
    <string name="cancel">Cancelar</string>
    <string name="incomplete_fields">Campos incompletos</string>
    <string name="expiration_date_invalid">Fecha de vencimiento inválida o vencida</string>
    <string name="card_number_invalid">Número de tarjeta ingresado incorrecto</string>
    <string name="card_name_invalid">El nombre/apellido del titular no corresponde con tu nombre/apellido</string>
    <string name="security_code_invalid">El número de seguridad ingresado es inválido</string>
    <string name="card_added">Tarjeta agregada correctamente</string>
    <string name="please_complete_fields">Por favor complete todos los campos</string>
    <string name="please_fix_expiration_date">Por favor revise la fecha de vencimiento</string>
    <string name="please_fix_card_number">Por favor revise el número de tarjeta ingresado</string>
    <string name="please_fix_card_name">Por favor revise el nombre ingresado</string>
    <string name="please_fix_security_number">Porfavor revise el número de seguridad ingresado</string>
    <string name="user_created">Usuario creado correctamente</string>
    <string name="username_already_used">Ya existe una cuenta con ese usuario</string>
    <string name="ok">Ok</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="invalid_credentials">Credenciales incorrectas</string>
    <string name="invalid_credentials_description">Ingrese nuevamente las credenciales</string>
    <string name="payment_completed">Pago realizado exitosamente</string>
    <string name="insufficient_balance">Saldo insuficiente</string>
    <string name="wrong_amount">El monto ingresado debe ser mayor a $0</string>
    <string name="enter_the_amount_again">Ingrese nuevamente el monto a pagar</string>
    <string name="select_card_to_continue">Seleccione una tarjeta para continuar</string>
    <string name="welcome">Bienvenido %1$s</string>
    <string name="create_your_account">Crea tu cuenta</string>
    <string name="there_was_an_error">Ha habido un error</string>
    <string name="try_again_later">Pruebe nuevamente mas tarde</string>
    <string name="title_no_card">Todavía no tenés ninguna tarjeta asociada</string>
    <string name="subtitle_no_card">Deseas agregar una tarjeta?</string>
    <string name="no_camera_permission">La app no tiene permisos para abrir la cámara</string>
    <string name="enable_camera_permission">Error decrypting card data</string>
</resources>