<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:orientation="vertical"
    tools:context=".ui.start.signUp.SignUpActivity">

    <include
        android:id="@+id/containerToolbar"
        layout="@layout/layout_toolbar"/>

    <ImageView
        android:id="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eldar_srl_logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        style="@style/TextStyleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/create_your_account"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etName"
        style="@style/StyleButtonApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:maxLength="40"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toTopOf="@+id/etSurname"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etSurname"
        style="@style/StyleButtonApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/surname"
        android:inputType="textCapWords"
        android:layout_marginTop="@dimen/margin_app"
        android:maxLength="40"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/etUsername"
        style="@style/StyleButtonApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margin_app"
        android:maxLength="20"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/etSurname"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        app:boxBackgroundColor="@color/white"
        app:hintEnabled="false"
        android:layout_marginTop="@dimen/margin_app"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/StyleButtonApp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingVertical="15dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/register"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>