<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_login"
    tools:context=".ui.start.login.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eldar_srl_logo"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/StyleButtonApp"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:backgroundTint="@color/white"
        android:hint="@string/user_name"
        android:maxLength="20"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:textSize="16sp"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        app:boxBackgroundColor="@color/white"
        app:hintEnabled="false"
        android:layout_marginTop="@dimen/margin_app"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/StyleButtonApp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingVertical="15dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:layout_marginTop="54dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/login"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:layout_marginTop="@dimen/margin_app"
        android:backgroundTint="@color/white"
        android:text="@string/register"
        android:textColor="@color/black"
        app:cornerRadius="8dp" />

</LinearLayout>