<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.newCard.NewCardActivity">

    <include
        android:id="@+id/containerToolbar"
        layout="@layout/layout_toolbar"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/margin_app"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        android:layout_margin="@dimen/margin_app"
        app:strokeColor="@color/white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_app"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_number"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:maxLength="19" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ivCardLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                tools:visibility="visible"
                tools:src="@drawable/mastercard_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_app"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_app"
                android:theme="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_name"
                    android:inputType="textCapCharacters"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_app"
                android:theme="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExpirationDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expiration_date_format"
                    android:inputType="number"
                    android:maxLength="16"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_app"
                android:theme="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSecurityCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/security_code"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_app"
                android:theme="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCardDocument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_document"
                    android:inputType="number"
                    android:maxLength="16"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="@dimen/margin_app"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:layout_marginTop="6dp"
        android:text="@string/add_card"/>

</LinearLayout>