<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    tools:background="@android:color/black"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_button"
        android:backgroundTint="@color/color_secondary"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="@string/app_name"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:text="Title"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/mDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                tools:text="Porfavor completar todos los campos"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="Description"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNegative"
                android:layout_width="match_parent"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:textAllCaps="false"
                android:textSize="14dp"
                app:backgroundTint="#343434"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPositive"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:textAllCaps="false"
                android:textSize="14dp"
                app:backgroundTint="@color/color_primary"
                android:text="@string/complete"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>